# adobe-experience-manager-mcps

./: .gitignore  CONTRIBUTING.md  COPILOT_CONFIGURATION_GUIDE.md  COPILOT_SETUP.md  EXAMPLES.md  LICENSE  MCP_COPILOT_INTEGRATION.md  README-en.md  README-pt-BR.md  README.md  mcp-config-example.json  pyproject.toml  pytest.ini  test-mcp-docker.sh
.github/: copilot-instructions.json
.kiro/prompts/en/: prompt-configure-mcps-adobe-and-aws.md
.kiro/prompts/ptbr/: prompt-configurar-mcps-adobe-e-aws.md
.kiro/settings/: mcp.json
aem_documentation_mcp_server/: CHANGELOG.md  COMPLETION_REPORT.md  Dockerfile  ENHANCEMENT_SUMMARY.md  LICENSE  NOTICE  OBSERVABILITY_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v0.4.0.md  SECURITY_ANALYSIS.md  copilot-mcp-config.json  inspect_html.py  planejamento.md  pyproject.toml  test_extraction.py  test_new_domains.py
aem_documentation_mcp_server/adobelabs/: __init__.py
aem_documentation_mcp_server/adobelabs/aem_documentation_mcp_server/: __init__.py  models.py  server.py  server_utils.py  util.py  youtube_utils.py
aem_documentation_mcp_server/aemlabs/: __init__.py
aem_documentation_mcp_server/aemlabs/aem_documentation_mcp_server/: __init__.py  models.py  search_utils.py  server.py  server_utils.py  util.py  youtube_utils.py
aem_documentation_mcp_server/tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_search_utils.py  test_server.py  test_server_utils.py  test_util.py  test_youtube_utils.py
config-examples/: README.md  claude-desktop-config-uv.json  claude-desktop-config.json
examples/: example_usage.py
src/adobe_experience_manager_mcps/: __init__.py  __main__.py  server.py
src/aem_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_server.py
