[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adobe-experience-manager-mcps"
version = "0.1.0"
description = "Model Context Protocol server for Adobe Experience Manager documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adobe_experience_manager_mcps"]
